--- a/views/items.ejs
+++ b/views/items.ejs
@@ -127,6 +127,9 @@
     .sweetalert-lg{
     margin: auto;
     }
+    div.img-box{
+      text-align: center;
+    }
   </style>
   <!-- <script src="../public/"></script> -->
 </head>
@@ -435,8 +438,7 @@
                                 <div class="row" style="display: inline-block;">
                                   <div class="col-12" style="height: 303px; width:fit-content;">
                                     <a href="<%=rows[4*i+1].purchase_link%>">
-                                      <div class="img-box"><img src="<%=rows[4*i+1].img_link%>" alt=""
-                                          class="img-thumbnail img-fluid">
+                                      <div class="img-box"><img src="<%=rows[4*i+1].img_link%>" alt="" class="img-thumbnail img-fluid">
                                       </div>
                                     </a>
                                     <a href="<%=rows[4*i+1].purchase_link%>">
