--- a/views/mypage_main.ejs
+++ b/views/mypage_main.ejs
@@ -7,7 +7,11 @@
     <title>Document</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&family=Noto+Sans+KR:wght@500&family=Roboto:ital,wght@1,100&display=swap" rel="stylesheet">
+   
+   <style>
         #logo{
             height: 45px;
         }
@@ -65,6 +69,9 @@
         display: none;
       }
 
+      #nick{
+        font-family: 'Do Hyeon';    
+       }
 
     </style>
 
@@ -158,7 +165,7 @@
             </div> -->
             <br><br><br>
 
-            <div><h1>안녕하세요, <%=user.nick%> 님</h1></div>
+            <div><h1 id="nick">안녕하세요, <%=user.nick%> 님</h1></div>
             <hr>
             <div class="row my-3">
               <div class="col"><a href="http://127.0.0.1:3000/mypage_wishList"><img src="./img/mp111.png" alt="" class="img-fluid"></a></div>
