--- a/views/find_result.ejs
+++ b/views/find_result.ejs
@@ -146,10 +146,17 @@
     <div><img src="./img/whiteBG3.png" alt="" class="img-fluid"></div>
     <div><img src="./img/whiteBG3.png" alt="" class="img-fluid"></div>
 
+    <!-- <% let find_type="" %> 
+    <% if(type=="id"){%>
+      find_type="아이디"
+    <%}else{%>
+      find_type="비밀번호"
+  <%  } %>  -->
+
 
     <div class="px-4 py-5 my-5 text-center">
       <img class="d-block mx-auto mb-4 img-fluid" src="./img/logo01.png" alt="">
-      <p class="display-10 fw-bold fs-1"><%=name%>님의 아이디는</p>
+      <p class="display-10 fw-bold fs-1"><%=name%>님의 <%=type%> 는</p>
       <div class="col-lg-6 mx-auto"><br>
         <p class="lead mb-4 fs-2"><%=result%>입니다 </span></p>
         <br>
